# cerebro

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: __init__.py  custom_it.py  gsm8k.py  humaneval.py  mmlu.py  run_all.py
benchmarks/data/: custom_it_seed.json
cerebro/: __init__.py  cli.py  config.py
cerebro/execution/: __init__.py  orchestrator.py  result.py
cerebro/execution/modes/: __init__.py  direct.py  planner_solve.py  planner_solve_critic.py  rag.py
cerebro/memory/: __init__.py  embeddings.py  ingestion.py  semantic.py
cerebro/router/: __init__.py  features.py  heuristic.py  modes.py
cerebro/telemetry/: __init__.py  energy.py  logger.py  metrics.py
cerebro/trunk/: __init__.py  mlx_model.py  prompts.py
docs/: architecture.md  benchmarks.md  phase0-design.md
docs/_brief/: 00-brief.md  01-addendum-I.md  02-addendum-II.md  03-addendum-III.md  04-addendum-IV.md  ALL_CONCATENATED.md  README.md
docs/reviews/: 2026-05-11-codex-review.md
results/: README.md
scripts/: download_models.py  ingest_wikipedia.py  run_phase0_report.py  setup_environment.sh
tests/: __init__.py
tests/integration/: test_end_to_end.py
tests/unit/: test_bootstrap.py  test_memory.py  test_modes.py  test_router.py
