[project]
name = "cerebro"
version = "0.0.1"
description = "Phase 0: heuristic-routed orchestration of a local MLX LLM (Qwen2.5-1.5B) on Apple Silicon — no training."
authors = [
    { name = "Antonio Pitocco" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mlx", "llm", "router", "rag", "qwen", "apple-silicon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Vector store
    "lancedb>=0.10",
    "pyarrow>=15.0",

    # Embeddings
    "sentence-transformers>=3.0",

    # CLI + structured logging + config
    "typer>=0.12",
    "structlog>=24.1",
    "pyyaml>=6.0",

    # HTTP for HF hub model download
    "huggingface-hub>=0.24",

    # Wikipedia ingestion
    "wikipedia-api>=0.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# MLX (Apple Silicon LLM runtime). NOT in default deps because mlx wheels
# only ship for macOS arm64 — installing it on Linux CI fails. Local dev on
# Apple Silicon: `uv sync --extra apple --extra dev`.
apple = [
    "mlx>=0.18",
    "mlx-lm>=0.18",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "types-tqdm>=4.66",
]

[project.scripts]
cerebro = "cerebro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cerebro"]

# ---------- ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "SIM",               # simplify
    "RUF",               # ruff
    "ANN",               # annotations
    "D",                 # docstrings
]
ignore = [
    "D203",  # 1 blank line required before class docstring (conflict with D211)
    "D213",  # multi-line docstring summary should start at the second line (conflict with D212)
    "ANN101", "ANN102",  # self/cls type hints
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]
"benchmarks/**" = ["D"]
"scripts/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["cerebro"]

[[tool.mypy.overrides]]
# Third-party libs without type stubs
module = [
    "mlx.*",
    "mlx_lm.*",
    "lancedb.*",
    "sentence_transformers.*",
    "wikipediaapi.*",
]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: tests that take >1s (typically RAG or end-to-end)",
    "requires_model: tests that need Qwen2.5 weights on disk",
    "requires_lancedb: tests that need a populated LanceDB",
]

[tool.coverage.run]
source = ["cerebro"]
omit = ["cerebro/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
